Fixed down arrow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ footer {
     margin: auto;
     bottom: 0;
     width: 100px;
+    height: 43px;
 }
 
 .card {
